src/test/deca/context/invalid/our_tests/jb-OpCmp-simple4.deca
// Description:
//    OpCmp Contextual error
//
// Resultats:
//    Ligne 11: Operation avec OpDroit boolean et OpGauche int ou float
// 
// Historique:
//    cree le 18/01/2017

{
1.0 != false;
}
